fix table__cell formatting as a list https://ru.stackoverflow.com/a/813395

--- a/styles/style.css
+++ b/styles/style.css
@@ -162,11 +162,13 @@
   width: 1100px;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0;
 }
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
+  list-style-type: none;
 }
 
 .table__heading {
@@ -319,6 +321,7 @@
 .footer__column-links {
   list-style-type: none;
   margin-bottom: 16px;
+  margin: 0;
   padding: 0;
 }
 
@@ -329,6 +332,7 @@
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
+  list-style-type: none;
 }
 
 .footer__social-icon {
